# ocr-toolkit

./: .gitignore  CI-CD.md  README.md  generate_openapi.py  main.py  openapi.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
openapi/: openapi.json  openapi.yaml
sample_files/: real_ocr_results.csv
src/backend/: .bandit  .bandit.yaml  fast_api_server.py  generate_openapi.py  main.py  mypy.ini  pyproject.toml  test_structure.py
src/backend/api/: endpoints.py
src/backend/controllers/: __init__.py  health_controller.py  ocr_controller.py
src/backend/core/: ocr_service.py
src/backend/models/: __init__.py
src/backend/services/: __init__.py  ocr_service.py
src/backend/tests/: test_api.py  test_e2e_ocr.py  test_openapi_autogen.py
src/ocr-engine/: fast_api_server.py  generate_openapi.py  main.py  pyproject.toml  test_structure.py
src/ocr-engine/api/: endpoints.py
src/ocr-engine/cache/: __init__.py
src/ocr-engine/controllers/: __init__.py
src/ocr-engine/core/: __init__.py  ocr_service.py
src/ocr-engine/db/: __init__.py
src/ocr-engine/tests/: test_api.py  test_e2e_ocr.py  test_openapi_autogen.py
src/ocr-engine/util/: __init__.py  config.py  file_validation.py  image_preparation.py  logger.py
