[tool.poetry]
name = "ocr-toolkit"
version = "1.0.0"
description = "OCR Toolkit API for text extraction and language detection"
authors = ["OCR Toolkit <support@ocr-toolkit.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
pillow = "^11.3.0"
pytesseract = "^0.3.13"
langdetect = "^1.0.9"
pymupdf = "^1.26.3"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
bandit = "^1.7.5"
pytest = "^7.4.0"
httpx = "^0.25.0"
types-pyyaml = "^6.0.12.20250516"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# Note: Poetry scripts work better with packages. Use direct commands instead:
# poetry run uvicorn main:app --reload --host 0.0.0.0 --port 8000
# poetry run python generate_openapi.py

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
